CREATE SCHEMA IF NOT EXISTS restaurantproject;
SET search_path TO restaurantproject;

CREATE TABLE CUSTOMER (
    CUS_ID INT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY, -- (Primary Key)
    FNAME VARCHAR(50),
    LNAME VARCHAR(50),
    EMAIL VARCHAR(100),
    PHONE_NUM VARCHAR(20),
    STREET VARCHAR(255),
    CITY VARCHAR(100),
    ZIP_CODE VARCHAR(20)
);

CREATE TABLE DISH (
    DISH_ID INT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY, -- (Primary Key)
    ZH_NAME VARCHAR(100),
    EN_NAME VARCHAR(100),
    PRICE DECIMAL(8,2),
    AVAILABLE BOOLEAN,
    CATEGORY VARCHAR(50),
    ZH_DESC TEXT,
    EN_DESC TEXT
);

CREATE TABLE DISH_OPTION (
    OPT_ID INT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY, -- (Primary Key)
    ZH_NAME VARCHAR(100),
    EN_NAME VARCHAR(100),
    PRICE DECIMAL(8,2),
    AVAILABLE BOOLEAN
);

CREATE TABLE DISH_RESTRICTION (
    RES_ID INT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY, -- (Primary Key)
    ZH_NAME VARCHAR(100),
    EN_NAME VARCHAR(100)
);

CREATE TABLE DISH_TO_OPTION (
    DISH_ID INT,
    OPT_ID INT,
    PRIMARY KEY (DISH_ID, OPT_ID),
    FOREIGN KEY (DISH_ID) REFERENCES DISH(DISH_ID), -- (Foreign Key)
    FOREIGN KEY (OPT_ID) REFERENCES DISH_OPTION(OPT_ID) -- (Foreign Key)
);

CREATE TABLE DISH_TO_RESTRICTION (
    DISH_ID INT,
    RES_ID INT,
    PRIMARY KEY (DISH_ID, RES_ID),
    FOREIGN KEY (DISH_ID) REFERENCES DISH(DISH_ID), -- (Foreign Key)
    FOREIGN KEY (RES_ID) REFERENCES DISH_RESTRICTION(RES_ID) -- (Foreign Key)
);

CREATE TABLE "order" ( -- "order" is a reserved keyword in Postgres, must be quoted
    ORD_ID INT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY, -- (Primary Key)
    CUS_ID INT, 
    TYPE VARCHAR(50),
    ORD_SPLIT INT,
    ORD_TIME TIMESTAMP,
    TABLE_NUM INT,
    FOREIGN KEY (CUS_ID) REFERENCES CUSTOMER(CUS_ID) -- (Foreign Key)
);

CREATE TABLE INVOICE (
    ORD_ID INT,
    SPLIT_ID INT, -- (Part of Primary Key)
    PAY_TYPE VARCHAR(50),
    PAY_INFO VARCHAR(255),
    PAID BOOLEAN,
    CREATE_TIME TIMESTAMP,
    PAID_TIME TIMESTAMP,
    PRIMARY KEY (ORD_ID, SPLIT_ID),
    FOREIGN KEY (ORD_ID) REFERENCES "order"(ORD_ID) -- (Foreign Key)
);

CREATE TABLE ORDER_LINE_ITEM (
    ORD_ID INT,
    LINE_NUM INT,
    DISH_ID INT,
    SPLIT_ID INT,
    QUANTITY INT,
    PRICE DECIMAL(8,2),
    NOTES TEXT,
    PRIMARY KEY (ORD_ID, LINE_NUM),
    FOREIGN KEY (ORD_ID) REFERENCES "order"(ORD_ID), -- (Foreign Key)
    FOREIGN KEY (DISH_ID) REFERENCES DISH(DISH_ID), -- (Foreign Key)
    FOREIGN KEY (ORD_ID, SPLIT_ID) REFERENCES INVOICE(ORD_ID, SPLIT_ID) -- (Foreign Key)
);

CREATE TABLE ORDER_LINE_OPTION (
    ORD_ID INT,
    LINE_NUM INT,
    OPT_ID INT,
    QUANTITY INT,
    PRICE DECIMAL(8,2),
    NOTES TEXT,
    PRIMARY KEY (ORD_ID, LINE_NUM, OPT_ID),
    FOREIGN KEY (ORD_ID, LINE_NUM) REFERENCES ORDER_LINE_ITEM(ORD_ID, LINE_NUM), -- (Foreign Key)
    FOREIGN KEY (OPT_ID) REFERENCES DISH_OPTION(OPT_ID) -- (Foreign Key)
);